apps/arcs/omega/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-omega
  labels:
    sage.arc: "true"
    arc.name: "omega"
